--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="./assets/styles.css">
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+        <div class="d-flex flex-column">
+            <h1 class="navbar-brand" id="mainlogo">AO CoDGSN</h1>
+            <div class="d-flex flex-row collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <il class="navbar-item">Architecture</il>
+                    <il class="navbar-item">Consignment</il>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <main>
+        <img src="" alt="" class="">
+        <img src="" alt="" class="">
+    </main>
 </body>
 </html>
