add base content to arch page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </main>
 
     <main class="flex-container pt-2">
-        <img src="./img/hero.jpg" alt="" class="" id="hero">
+        <img src="./img/hero.jpg" alt="" class="hero">
     </main>
   </body>
 </html>
