--- a/arch.html
+++ b/arch.html
@@ -26,17 +26,19 @@
       </div>
     </nav>
 
-    <main>
-      <div id="imgone">
-
+    <main class="container">
+      <div class="row pt-5 pl-3 pr-3 pb-3" id="imgone">
+        <div class="col-12">
+          <h1 class="display-1 text-italic">jeffrey james</h1>
+          <img src="./img/h1.jpg" alt="" class="hero" />
+        </div>
       </div>
-      <div id="imgtwo">
-
-      </div>
-      <div id="imgthree">
-        
+      <div class="row p-3" id="imgone">
+        <div class="col-12">
+          <h1 class="display-1 text-italic">starlet stanly</h1>
+          <img src="./img/h2.jpg" alt="" class="hero" />
+        </div>
       </div>
     </main>
-
   </body>
 </html>
