--- a/arch.html
+++ b/arch.html
@@ -12,11 +12,11 @@
       class="navbar navbar-expand-lg navbar-light bg-light justify-content-center fixed-top"
     >
       <div class="d-flex flex-column">
-        <h1 class="text-center text_large mb-0 mt-3" id="">ao codgsn</h1>
+        <a href="./index.html" class=""><h1 class="text-center text_large mb-0 mt-3" id="">ao codgsn</h1></a>
         <div class="d-flex flex-row collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mb-3">
             <il class="navbar-item text-center">
-              <a href="#" class="">Architecture</a>
+              <a href="./jj.html" class="">Architecture</a>
             </il>
             <il class="navbar-item text-center">
               <a href="#" class="">Consignment</a>
@@ -29,13 +29,13 @@
     <main class="container">
       <div class="row pt-5 pl-3 pr-3 pb-3" id="imgone">
         <div class="col-12">
-          <h1 class="display-1 text-italic">jeffrey james</h1>
+          <a href="./jj.html" class="stretched-link"><h1 class="display-1 text-italic">jeffrey james</h1></a>
           <img src="./img/h1.jpg" alt="" class="hero" />
         </div>
       </div>
       <div class="row p-3" id="imgone">
         <div class="col-12">
-          <h1 class="display-1 text-italic">starlet stanly</h1>
+          <a href="" class="stretched-link"><h1 class="display-1 text-italic">starlet stanley</h1></a>
           <img src="./img/h2.jpg" alt="" class="hero" />
         </div>
       </div>
