add bootstrap js and object modal popup

--- a/jj.html
+++ b/jj.html
@@ -45,21 +45,83 @@
           <div style="position: relative;">
             <img src="./img/h1.jpg" alt="" class="hero" />
             <div>
-              <button href="#" class="map_btn" id="jj_grey-chair-right">jj_grey-chair-right</button>
-              <button href="#" class="map_btn" id="jj_grey-chair-left">jj_grey-chair-left</button>
-              <button href="#" class="map_btn" id="jj_end-table-left">jj_end-table-left</button>
-              <button href="#" class="map_btn" id="jj_end-table-middle">jj_end-table-middle</button>
-              <button href="#" class="map_btn" id="jj_media-table-right">jj_media-table-right</button>
-              <button href="#" class="map_btn" id="jj_couch-grey-right">jj_couch-grey-right</button>
-              <button href="#" class="map_btn" id="jj_lamp-right">jj_lamp-right</button>
-              <button href="#" class="map_btn" id="jj_lamp-left">jj_lamp-left</button>
+              <button href="#" class="map_btn" id="jj_grey-chair-right">
+                jj_grey-chair-right
+              </button>
+              <button href="#" class="map_btn" id="jj_grey-chair-left">
+                jj_grey-chair-left
+              </button>
+              <button href="#" class="map_btn" id="jj_end-table-left">
+                jj_end-table-left
+              </button>
+              <button href="#" class="map_btn" id="jj_end-table-middle">
+                jj_end-table-middle
+              </button>
+              <button href="#" class="map_btn" id="jj_media-table-right">
+                jj_media-table-right
+              </button>
+              <button href="#" class="map_btn" id="jj_couch-grey-right">
+                jj_couch-grey-right
+              </button>
+              <button href="#" class="map_btn" id="jj_lamp-right">
+                jj_lamp-right
+              </button>
+              <button href="#" class="map_btn" id="jj_lamp-left">
+                jj_lamp-left
+              </button>
             </div>
           </div>
         </div>
       </div>
     </main>
 
+    <section>
+      <!-- Modal -->
+      <div
+        class="modal"
+        id="exampleModalCenter"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="exampleModalCenterTitle"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalCenterTitle">
+                Modal title
+              </h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">
+                Save changes
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="./assets/jquery.min.js"></script>
-    <script src="./assets/objects.js"
+    <script src="./assets/boostrap.min.js"></script>
+    <script src="./assets/objects.js"></script>
   </body>
 </html>
