--- a/jj.html
+++ b/jj.html
@@ -78,8 +78,8 @@
     <section>
       <!-- Modal -->
       <div
-        class="modal"
-        id="exampleModalCenter"
+        class="modal fade"
+        id="object_modal"
         tabindex="-1"
         role="dialog"
         aria-labelledby="exampleModalCenterTitle"
@@ -89,7 +89,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="exampleModalCenterTitle">
-                Modal title
+                Central Object
               </h5>
               <button
                 type="button"
@@ -101,7 +101,45 @@
               </button>
             </div>
             <div class="modal-body">
-              ...
+              <div class="row">
+                <div class="col-12 p-1">
+                  <img
+                    class="lazy-loaded"
+                    src="https://via.placeholder.com/150"
+                    data-lazy-type="image"
+                    data-src="https://via.placeholder.com/150"
+                    alt="Square placeholder image 300px"
+                    data-pin-description="Square placeholder image 300px"
+                  />
+                  <a href="#" class="">Chair Option 1</a>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12 p-1">
+                  <img
+                    class="lazy-loaded"
+                    src="https://via.placeholder.com/150"
+                    data-lazy-type="image"
+                    data-src="https://via.placeholder.com/150"
+                    alt="Square placeholder image 300px"
+                    data-pin-description="Square placeholder image 300px"
+                  />
+                  <a href="#" class="">Chair Option 2</a>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12 p-1">
+                  <img
+                    class="lazy-loaded"
+                    src="https://via.placeholder.com/150"
+                    data-lazy-type="image"
+                    data-src="https://via.placeholder.com/150"
+                    alt="Square placeholder image 300px"
+                    data-pin-description="Square placeholder image 300px"
+                  />
+                  <a href="#" class="">Chair Option 3</a>
+                </div>
+              </div>
             </div>
             <div class="modal-footer">
               <button
@@ -110,9 +148,6 @@
                 data-dismiss="modal"
               >
                 Close
-              </button>
-              <button type="button" class="btn btn-primary">
-                Save changes
               </button>
             </div>
           </div>
