change to consgn

--- a/arch.html
+++ b/arch.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AO CoDSGN</title>
+    <title>AO CoNSGN</title>
     <link rel="stylesheet" href="./assets/bootstrap.css" />
     <link rel="stylesheet" href="./assets/styles.css" />
   </head>
@@ -12,7 +12,7 @@
       class="navbar navbar-expand-lg navbar-light bg-light justify-content-center fixed-top"
     >
       <div class="d-flex flex-column">
-        <a href="./index.html" class=""><h1 class="text-center text_large mb-0 mt-3" id="">ao codgsn</h1></a>
+        <a href="./index.html" class=""><h1 class="text-center text_large mb-0 mt-3" id="">ao consgn</h1></a>
         <div class="d-flex flex-row collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mb-3">
             <il class="navbar-item text-center">
@@ -29,13 +29,13 @@
     <main class="container">
       <div class="row pt-5 pl-3 pr-3 pb-3" id="imgone">
         <div class="col-12">
-          <a href="./jj.html" class="stretched-link"><h1 class="display-1 text-italic">jeffrey james</h1></a>
+          <a href="./jj.html" class="stretched-link"><h1 class="display-3 text-italic">dsgn: lab 1</h1></a>
           <img src="./img/h1.jpg" alt="" class="hero" />
         </div>
       </div>
       <div class="row p-3" id="imgone">
         <div class="col-12">
-          <a href="" class="stretched-link"><h1 class="display-1 text-italic">starlet stanley</h1></a>
+          <a href="" class="stretched-link"><h1 class="display-3 text-italic">dgsn: lab 2</h1></a>
           <img src="./img/h2.jpg" alt="" class="hero" />
         </div>
       </div>
