--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AO CoDSGN</title>
+    <title>AO CoNSGN</title>
     <link rel="stylesheet" href="./assets/bootstrap.css" />
     <link rel="stylesheet" href="./assets/styles.css" />
   </head>
@@ -12,7 +12,7 @@
       class="navbar navbar-expand-lg navbar-light bg-light justify-content-center fixed-top"
     >
       <div class="d-flex flex-column">
-        <h1 class="text-center text_large m-3" id="">ao codgsn</h1>
+        <h1 class="text-center text_large m-3" id="">ao congsn</h1>
         <!-- <div class="d-flex flex-row collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <il class="navbar-item text-center">
