--- a/jj.html
+++ b/jj.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AO CoDSGN</title>
+    <title>AO CoNSGN</title>
     <link rel="stylesheet" href="./assets/bootstrap.css" />
     <link rel="stylesheet" href="./assets/styles.css" />
     <link rel="stylesheet" href="./assets/jeffreyjames.css" />
@@ -14,7 +14,7 @@
     >
       <div class="d-flex flex-column">
         <a href="./index.html" class=""
-          ><h1 class="text-center text_large mb-0 mt-3" id="">ao codgsn</h1></a
+          ><h1 class="text-center text_large mb-0 mt-3" id="">ao congsn</h1></a
         >
         <div class="d-flex flex-row collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mb-3">
@@ -35,7 +35,7 @@
       <div class="row pt-5 pb-3" id="imgone">
         <div class="col-12">
           <div class="pl-5 pt-5">
-            <h1 class="display-1 text-italic">jeffrey james</h1>
+            <h1 class="display-1 text-italic">dgsn: lab 1</h1>
             <p class="leading">
               minimalist mid century modern. interior design by: jeremih stanley
             </p>
